--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx ts-node src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,22 @@
   "bugs": {
     "url": "https://github.com/mahmoudshahin1111/apollo-graphql/issues"
   },
-  "homepage": "https://github.com/mahmoudshahin1111/apollo-graphql#readme"
+  "homepage": "https://github.com/mahmoudshahin1111/apollo-graphql#readme",
+  "dependencies": {
+    "@apollo/server": "^4.4.1",
+    "axios": "^1.3.4",
+    "cron": "^2.2.0",
+    "dayjs": "^1.11.7",
+    "graphql": "^16.6.0",
+    "lodash": "^4.17.21",
+    "ts-loader": "^9.4.2",
+    "winston": "^3.8.2"
+  },
+  "devDependencies": {
+    "@types/cron": "^2.0.0",
+    "@types/lodash": "^4.14.191",
+    "@types/node": "^18.14.6",
+    "typescript": "^4.9.5",
+    "webpack-cli": "^5.0.1"
+  }
 }
