--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "apollo-graphql",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "start": "npx ts-node src/index.ts"
   },
