--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
   api:
     container_name: apollo-api
     build: ./
+    ports:
+      - 4000:4000
     env_file:
       - .env
     restart: always
